# rust-algo

./: Cargo.toml  README.md  db.txt  info.md  res.json
benches/: benchmark.rs
src/: 1.txt  btree.rs  count_jewels.rs  ends_with.rs  fib_perimeter.rs  list_node.rs  noice.csv  persistency.rs
src/done/: LinkedListPush.rs  better_include_macro.rs  brainfuck_compiler.rs  can_see_person_todo.rs  cat.rs  count_duplicates.rs  decoding.rs  escape.rs  factorial.rs  failed_zig_zag.rs  fibbonaci.rs  file_kvp.rs  find_primes.rs  funny_number_things.rs  good_pairs_uf.rs  inventory.rs  like_comments.rs  link_lists_shananigans.rs  linked_list_generics.rs  max_units.rs  palindromes.rs  recursive_str.rs  remove_elem.rs  req.rs  reverse_int.rs  swap_pairs.rs  symetric_diffrence.rs  to_rgb.rs  total_savings.rs  two_sum.rs
src/memory_n_pointers/: cell.rs  refcell.rs
