[package]
name = "algorithms"
version = "0.1.0"
authors = ["klaus <kodemode@wp.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
